--- a/include/Calibration.tex
+++ b/include/Calibration.tex
@@ -266,20 +266,20 @@ chips.
   \centering
   \caption{Details of different Advacam planar pixel sensors
     bump-bonded to Timepix3 readout ASICs and studied in calibration
-    and test beams. For active-edge sensors, the edge distance is
-    defined by the distance between the last pixel implant and the
-    physical sensor edge (see \cref{ch:ActiveEdgeSensors}).}
+    and test beams.}
   \label{tab:Timepix3Assemblies}
-  \resizebox{\textwidth}{!}{\begin{tabular}{lccccc}
-    \toprule
-    Timepix3 ID & Thickness [\micron] & Type & Edge distance [\micron] & Guard-ring potential & Assembly\\
-    \midrule
-     W19\_G7 & 50 & n-in-p & 20 & Without GR & 20-NGR-50 \\
-     W19\_F7 & 50 & n-in-p & 23 & Floating & 23-FGR-50 \\
-     W19\_L8 & 50 & n-in-p & 28 & Grounded & 28-GNDGR-50 \\
-     W19\_C7 & 50 & n-in-p & 55 & Grounded & 55-GNDGR-50 \\ \hline
-     W5\_E2 & 100 & n-in-p & 55 & Grounded & 55-GNDGR-100 \\ \hline
-     W5\_F1 & 150 & n-in-p & 55 & Grounded & 55-GNDGR-150 \\ %% \hline
+  \resizebox{\textwidth}{!}{\begin{tabular}{lcccc}
+                              \toprule
+                              Timepix3 ID & Thickness [\micron] & Type & Bias voltage [V] &
+                                                                                            Threshold
+                                                                                            DAC \\
+                              \midrule
+                              W19\_G7 & 50 & n-in-p & -15 & 1190 \\
+                              W19\_F7 & 50 & n-in-p & -15 & 1187 \\
+                              W19\_L8 & 50 & n-in-p & -15 & 1133 \\
+                              W19\_C7 & 50 & n-in-p & -15 & 1148 \\ \hline
+                              W5\_E2 & 100 & n-in-p & -20 & 1160 \\ \hline
+                              W5\_F1 & 150 & n-in-p & -30 & 1153 \\ %% \hline
      %% W2\_J5 & 300 & p-in-n & - & - & - \\
     \bottomrule
   \end{tabular}}
