--- a/include/appendix_ActiveEdgeSensors.tex
+++ b/include/appendix_ActiveEdgeSensors.tex
@@ -36,7 +36,8 @@ corresponds to the depletion region.
     \includegraphics[width=\textwidth]{figures/TCAD/dopingConcentration_55_GNDGR_150.png}
     \caption{55-GNDGR-150}
   \end{subfigure}
-  \caption{Doping concentration in TCAD simulations. The region shown
+  \caption{Doping concentration in TCAD simulations for the assemblies
+    listed in \cref{tab:ActiveEdgeAssemblies}. The region shown
     with a white line is the depletion region.}
   \label{fig:TCAD_dopingConcentration}
 \end{figure}
