--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -652,7 +652,8 @@ tracks projected to pass through the assembly. The efficiency is
 calculated within the matrix of $256\times256$ pixels of the main
 sensor area. The calculation of the efficiency does not exclude the
 track hitting the masked or hot pixels, therefore the efficiency is
-slightly lower than $100\%$.
+slightly lower than $100\%$ (see \cref{tab:numberOfMaskedPixels} for
+the number of masked pixels during the data taking).
 
 The detection efficiency is strongly related to the operating
 threshold of the readout ASIC. With a lower threshold, smaller energy
