[Résumé] une petite mis à jour

--- a/resume.tex
+++ b/resume.tex
@@ -2,13 +2,13 @@
 \chapter*{Résumé}
 % ============================================================================== 
 
-Le Compact Linear Collider (CLIC), ou le Collisionneur Linéaire
-Compact, est un accélérateur de particules qui permet d'effectuer des
-collisions entre des électrons et positrons à des énergies de l'ordre
-de quelques \tev. Le CLIC, est considéré comme une des options qui
-pourrait être complémentaire aux expériences du LHC pour la découverte
-de la physique au-delà du modèle standard et de réaliser des mesures
-plus précises sur le boson de Higgs par exemple.
+Le Collisionneur Linéaire Compact (CLIC), ou le Compact Linear
+Collider, est un accélérateur de particules qui permet d'effectuer des
+collisions entre des électrons et des positrons à des énergies de
+l'ordre de quelques \tev. Le CLIC, est considéré comme une des options
+qui pourrait être complémentaire aux expériences du LHC pour la
+découverte de la physique au-delà du modèle standard et de réaliser
+des mesures plus précises sur le boson de Higgs par exemple.
 
 Un détecteur de haute précision est en cours de développement afin
 d'atteindre les objectifs de découvertes pour CLIC. Cette thèse se
